<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/choose_task_type_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/padding"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text"
        android:textSize="@dimen/title_size"
        android:text="@string/add"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_tasks_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="1"
        tools:listitem="@layout/rcv_task_type" />

</LinearLayout>