...
            app:rb_scale="6"
            android:gravity="bottom|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fb_add_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_big"
...
